--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -24,6 +24,12 @@
         }
     },
 
+    "PF2E-PD.Notification": {
+        "MissingActor": "Token(s) must be selected to apply persistent damage",
+        "Overwritten": "Existing persistent damage effect has been overwritten",
+        "NotOverwritten": "Did not apply new persistent damage effect due to being weaker"
+    },
+
     "PF2E-PD.Dialog": {
         "Title": "Add Persistent Damage",
         "Apply": "Apply",
