--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -25,6 +25,7 @@
     },
 
     "PF2E-PD.Notification": {
+        "Created": "Added persistent {damageType} damage",
         "MissingActor": "Token(s) must be selected to apply persistent damage",
         "Overwritten": "Existing persistent damage effect has been overwritten",
         "NotOverwritten": "Did not apply new persistent damage effect due to being weaker"
